--- a/Learn to Code/07 Getting User Input/Snapcat/index.html
+++ b/Learn to Code/07 Getting User Input/Snapcat/index.html
@@ -9,6 +9,6 @@
   <br>
   <button onclick="signUp()">Sign up</button>
   <p id="message"></p>
-  <script = src="script.js"></script>
+  <script src="script.js"></script>
  </body>
 </html>
