--- a/04 FreeCodeCamp/01 Responsive Web Design Certification/Projects/Build a Tribute Page/v1/page.html
+++ b/04 FreeCodeCamp/01 Responsive Web Design Certification/Projects/Build a Tribute Page/v1/page.html
@@ -1,15 +1,70 @@
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <div id="main">
-  <div class="main">
-  <div id="h1-logo"><img src="http://www.techdif.co.uk/img/logo.png" alt="The Technical Difficulties Logo"></div>
-  <div id="h2-title"><h1>The Technical Difficulties</h1><p>This is a little Tribute Site for The Technical Difficulties <br> done as an Project for FreeCodeCamp.com</p><br><a href="http://www.techdif.co.uk" id="tribute-link" target="_blank">Their Offical Website</a> </p></div>
-  <div id="img-div"><img src="http://www.techdif.co.uk/img/polaroid3.png" alt="Group Photo" id="image"><p id="img-caption">Tom Scott, Matt Gray, Chris Joel, Gary Brannan</p></div>
+  <div class="head flex bluebox">
+    <div id="h1-logo" class="box"><img src="http://www.techdif.co.uk/img/logo.png" alt="The Technical Difficulties Logo" id="logo"></div>
+    <div id="h2-title" class="box"><h1 id="title">The Technical Difficulties</h1><p id="tribute-info">This is a little Tribute Site for The Technical Difficulties <br> done as an Project for FreeCodeCamp.com</p><br><a href="http://www.techdif.co.uk" id="tribute-link" target="_blank">Their Offical Website</a> </p></div>
+    <div id="img-div" class="box"><img src="http://www.techdif.co.uk/img/polaroid3.png" alt="Group Photo" id="image"><p id="img-caption">Tom Scott, Matt Gray, Chris Joel, Gary Brannan</p></div>
   </div> 
 
-  <div id="about"></div>
-  <div id="Shows"></div>
+  <div id="about" class="bluebox about"><h2>So, who are they?</h2><p>Technical Difficulties have been together since the mid 2000s. On the radio, they won the inaugural Kevin Greening Award for Creativity in 2008, and a Bronze for Best Entertainment the year after at the Student Radio Awards. they finished 2009 by making a three-part video series. Our reverse trivia quiz podcast followed, and after 33 episodes we morphed it into Citation Needed. After over 50 Episodes of Citation Needed, the bunch is on the look out for new format to entertain their dear viewers and so, The Experiments and Two of These People Are Lying has been born.</p></div>
 
-  <div id="Crew"></div>
+  <div id="Shows"  class="bluebox">
+    <div><h2>Their Shows</h2></div>
+    <div class="showgroup">
+    <div class="content">
+      <div class="content-title"><h3>The Audio Episodes</h3></div>
+      <div class="content-text"><p>Their back catalogue, filled with Podcast episodes of Reverse Trivia and some other shenanigans!</p></div>
+      <div class="content-media"><div class="rss"><div class="rss-addon"><input type="text" class="rss-link" value="http://www.techdif.co.uk/podcast/feed.xml" width="auto"></div></div>
+      <div class="media-link"><a href="http://itunes.apple.com/gb/podcast/the-technical-difficulties/id531200269" alt="Link towards their iTunes Podcast" id="ituneslink">Find them on iTunes!</a></div></div>
+    </div>
+
+    <div class="content">
+      <div class="content-title"><h3>Citation Needed</h3></div>
+      <div class="content-text"><p>A trivia quiz with facts, dings and mystery biscuits that ends up on a tangent more often than an answer. Tom picks a page from wikipedia almost at random, and Chris Gary and Matt have to guess what it's about.</p></div>
+      <div class="content-media"><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL0CFk33kNHvSdeJm6HQtiJygOCV0o9JdK" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    </div>
+
+    <div class="content">
+      <div class="content-title"><h3>The Experiments</h3></div>
+      <div class="content-text"><p>On the Hunt for new ideas Tom, Matt, Gary and Chris started their experment with different formats for a new show, including a run of "Two of these are Lying"</p></div>
+      <div class="content-media"><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL8-XD8ADjWY_60T-AWHFMmXTgAwjV_mNp" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    </div>
+  </div>
+  </div>
+
+  <div id="Crew" class="bluebox">
+    <div><h2>The Crew</h2></div>
+    
+    <div class="crewgroup flex">
+
+      <div class="avatar">
+        <div class="avatar-img"><img class="avatar-img" src="https://pbs.twimg.com/profile_images/1147263107082989569/kVxalZfU_400x400.png" alt="Tom Scott Twitter Avatar"></div>
+        <div class="avatar-bio"><p>The one in a red t-shirt. Once got five gold runs on Blockbusters.</p></div>
+        <div class="avatar-link"> <a href="https://twitter.com/tomscott" alt="Twitter" class="avatar-a">@TomScott</a></div>
+      </div>
+
+      <div class="avatar">
+        <div class="avatar-img"><img class="avatar-img" src="https://pbs.twimg.com/profile_images/707971729180725249/y4ybbHJK_400x400.jpg"></div>
+        <div class="avatar-bio"><p>Professional broadcast engineer. Provides 87% of the show's bounce.</p></div>
+        <div class="avatar-link"> <a href="https://twitter.com/MattGrayYes" alt="Twitter" class="avatar-a">@MattGrayYes</a></div>
+      </div>
+
+      <div class="avatar">
+        <div class="avatar-img"><img class="avatar-img" src="https://pbs.twimg.com/profile_images/1162801532758347776/Oi_3we1T_400x400.jpg"></div>
+        <div class="avatar-bio"><p>Person by day, asleep by night; built for leisure, not for speed.</p></div>
+        <div class="avatar-link"> <a href="https://twitter.com/garrybrannan" alt="Twitter" class="avatar-a">@GarryBrannan</a></div>
+      </div>
+
+      <div class="avatar">
+        <div class="avatar-img"><img class="avatar-img" src="http://www.techdif.co.uk/img/chris.jpg"></div>
+        <div class="avatar-bio"><p>Once was on Social Media, then decided to go there never again.</p></div>
+        <div class="avatar-link"><a href="https://en.wikipedia.org/wiki/Mountain_man" alt="Twitter" class="avatar-a">@ChrisJoel</a></div>
+      </div>
+
+    </div>
+
+  </div>
 </div>
